fix: z-index

--- a/app/content/editor.css
+++ b/app/content/editor.css
@@ -105,7 +105,7 @@
 
     li {
       margin-bottom: 0.5em;
-      
+
       p {
         margin: 0;
       }
@@ -178,4 +178,8 @@
 .ProseMirror h3 {
   scroll-margin-top: 100px; /* This helps with the header offset */
   transition: background-color 0.3s ease;
-} 
+}
+
+[data-tippy-root] {
+  z-index: 1 !important;
+}
